2006-10-21  Matthias Wimmer  <m@tthias.eu>

    * clients.cc: even more C++: config defaults, strings
    * conn.cc: same
    * connect.cc: same
    * jadc2s.cc: same
    * jadc2s.h: same
    * util/config.cc: same
    * util/util2.h: same
    * util/str.cc: not used anymore, removing
    * util/util.h: same

2006-10-20  Matthias Wimmer  <m@tthias.eu>

    * clients.cc: using Glib::ustring for UTF-8 strings
    * conn.cc: same
    * connect.cc: same
    * jadc2s.cc: same
    * rate.cc: same
    * jadc2s.h: same
    * util/util2.h: same
    * util/config.cc: same
    * util/jid.cc: same
    * util/log.cc: same
    * util/nsparser.cc: same
    * util/xmlistream.cc: same

2006-10-15  Matthias Wimmer  <m@tthias.eu>

    * util/xmlistream.cc: parser to create stanza events
    * util/util2.h: same
    * util/nsparser.cc: changes to support xmlistream

2006-10-14  Matthias Wimmer  <m@tthias.eu>

    * util/nsparser.cc: subclassing xmlpp::SaxParser to get a ns-aware parser
    * util/util2.h: same

2006-10-13  Matthias Wimmer  <m@tthias.eu>

    * clients.cc: fixing problem in SASL authentication

2006-10-12  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.cc: Logging the version number on startup
    * util/config.cc: using libxml++ instead of xerces
    * util/util2.h: same

2006-10-11  Matthias Wimmer  <m@tthias.eu>

    * util/config.cc: new class to access configuration
    * util/pointer.tcc: new method points_to_NULL() for pointer class
    * util/jid.cc: new class to represent JabberIDs
    * util/str.cc: removing functions _j_strcpy() and zonestr()
    * util/pool.cc: removing this module completely
    * util/log.cc: output operator for std::string
    * util/util.h: reflecting the above changes
    * util/util2.h: same
    * mio/mio.cc: declaring sourceip argument of mio_listen as const
    * mio/mio.h: same
    * clients.cc: using new features from util/*.cc, using std::string
    * connect.cc: same
    * rate.cc: same
    * jadc2s.cc: same